[exceptional-dione] several refinement